--- a/client/public/index.html
+++ b/client/public/index.html
@@ -33,7 +33,9 @@
     -->
     <title>React App</title>
   </head>
-  <body>
+  <body
+    class="C:\Users\preet\OneDrive\Desktop\lets_endorse\Team-78\client\src\images\background.jpeg"
+  >
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
