--- a/client/public/index.html
+++ b/client/public/index.html
@@ -9,6 +9,7 @@
   <meta name="description" content="Let's Endorse Web Application" />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
   <link href="https://demo.dashboardpack.com/architectui-html-free/main.css" rel="stylesheet">
+
   <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -26,6 +27,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
   <title>React App</title>
+  <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
 </head>
 
 <body>
